# hackpack-robots

./: LICENSE  Makefile.inc  README.md
blinker/: Makefile  blinker.ino
ir-debug/: ir-debug.ino
ir-turret/: README.md  ir-turret.ino
ir-turret-original/: ir-turret-original.ino
label-maker/: label-maker.ino
label-maker-original/: label-maker-original.ino
mcp/: Cargo.toml  Makefile  README.md  arduino-mcp-adapter.service  generate_bindings  generate_manifest  mcp.hpp  mcp_process_frame.hpp  test-basic-mcp.sh  test-common.sh  test-e2e-mcp.sh  test-python-mcp.sh  test-reconnect.sh  test-robot.json
mcp/arduino-mcp-adapter/: connection.rs  main.rs  manifest.rs  protocol.rs  python_runner.rs  server.rs  slip.rs
mcp/arduino-mcp-adapter/resources/: python_prelude.py.tmpl  runPythonScript.json
mcp/arduino-simulator/: main.rs  protocol.rs  slip.rs
mcp/src/: connection.rs  main.rs  protocol.rs  server.rs
