[package]
name = "arduino-mcp-adapter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arduino-mcp-adapter"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
serialport = { version = "4.0", default-features = false }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"